appId: com.agrimarket.mobile
---
- launchApp:
    clearState: true
- tapOn:
    text: "^Khám phá$"
    retryTapIfNoChange: true
- assertVisible:
    text: "^Khám phá$"
    selected: true
- tapOn:
    text: "^Tài khoản$"
    retryTapIfNoChange: true
- assertVisible:
    text: "^Tài khoản$"
    selected: true
- pressKey: BACK
- assertVisible:
    text: "^Khám phá$"
    selected: true
- tapOn:
    text: "^Trang chủ$"
    retryTapIfNoChange: true
- assertVisible:
    text: "^Trang chủ$"
    selected: true
